<resources>
    <string name="app_name">The ToDo App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signed">Sign Up</string>
    <string name="already_have_an_account_login">If you have an account, Log in!</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_in">If you don\'t have account, Register!</string>
    <string name="successful_login">Successful Login!</string>
    <string name="logout">Log out</string>
    <string name="checkbox">CheckBox</string>
    <string name="place_holder">Place Holder</string>
    <string name="no_tasks">No tasks. Add a new task!</string>
    <string name="cancel">Cancel</string>
    <string name="schedule">Schedule</string>
    <string name="notification_title">Notif Test</string>
    <string name="notification_subtitle">Just a test</string>

    <string name="notification_schedule_title">Schedule notification:\u00a0</string>
    <string name="notification_schedule_error">Notification failed</string>
    <string name="notification_schedule_pattern">dd.MM.yy \u00B7 HH:mm</string>
</resources>